[package]
name = "bandersnatch-lambdaworks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks", rev = "a17b951" }
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", rev = "943963c" }
